<resources>
    <string name="app_name">EffectiveMobileTestTask</string>
    <string name="entry">Вход</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="cyrillic_letters_allowed">Разрешены только кириллические буквы</string>
    <string name="phone_number_helper">Номер телефона должен быть в формате +7 XXX XXX XX XX</string>
    <string name="login">Войти</string>
    <string name="privacy_policy">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="privacy_policy_link"><u>условия программы лояльности</u></string>
    <string name="by_popularity">По популярности</string>
    <string name="filter">Фильтры</string>
    <string name="see_all">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="suntan">Загар</string>
    <string name="mask">Маска</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="cart">Корзина</string>
    <string name="promotion">Акции</string>
    <string name="profile">Профиль</string>
    <string name="personal_cabinet">Личный кабинет</string>
    <string name="hide">Скрыть</string>
    <string name="more">Подробнее</string>
    <string name="description">Описание</string>
    <string name="characteristics">Характеристики</string>
    <string name="content">Состав</string>
    <string name="add_cart">Добавить корзину</string>
    <string name="favorites">Избранное</string>
    <string name="product">товар</string>
    <string name="products">товар</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="offer">Оферта</string>
    <string name="return_product">Возврат товара</string>
    <string name="logout">Выйти</string>
    <string name="available_1">Доступно для заказа</string>
    <string name="available_2">штук</string>
    <string name="favorite_empty">Пока нет избранных товаров</string>
</resources>