<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RegistrationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title1"
        android:layout_marginTop="15dp"
        android:text="@string/entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_grey"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/first_name_helper_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/cyrillic_letters_allowed"
        android:textColor="@color/text_orange"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/first_name_et" />

    <ImageView
        android:id="@+id/clear_first_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_clear_big"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/first_name_et"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toTopOf="@id/first_name_et" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/last_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_grey"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_helper_tv"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/last_name_helper_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/cyrillic_letters_allowed"
        android:textColor="@color/text_orange"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/last_name_et"
        app:layout_constraintTop_toBottomOf="@id/last_name_et" />


    <ImageView
        android:id="@+id/clear_last_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_clear_big"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/last_name_et"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="@id/last_name_et"
        app:layout_constraintTop_toTopOf="@id/last_name_et" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_grey"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_helper_tv"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/phone_number_helper_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number_helper"
        android:textColor="@color/text_orange"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/phone_number_et"
        app:layout_constraintRight_toRightOf="@id/phone_number_et"
        app:layout_constraintTop_toBottomOf="@id/phone_number_et" />

    <ImageView
        android:id="@+id/clear_phone_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_clear_big"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/phone_number_et"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="@id/phone_number_et"
        app:layout_constraintTop_toTopOf="@id/phone_number_et" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_light_pink"
        android:clickable="false"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_helper_tv">

        <TextView
            style="@style/ButtonText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_white" />

    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/Caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        app:layout_constraintBottom_toTopOf="@id/link_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/link_tv"
        style="@style/LinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/privacy_policy_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>